--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -55,3 +55,28 @@
 	max-width: unset;
 	object-fit: cover;
 }
+
+.loader {
+	width: 48px;
+	height: 48px;
+	border: 5px solid #fff;
+	border-bottom-color: #ff3d00;
+	border-radius: 50%;
+	display: block;
+	box-sizing: border-box;
+	animation: rotation 1s linear infinite;
+	margin: 0 auto;
+}
+
+@keyframes rotation {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+.hidden {
+	display: none;
+}
